[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Scenes/Level/Waves/Wave 2.gd" type="Script" id=1]
[ext_resource path="res://Assets/Scenes/Enemy/Piercer Enemy/Piercer Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Scenes/Enemy/Enemy Spawn Handler/Waves/DefaultWave.tscn" type="PackedScene" id=3]

[node name="Wave" instance=ExtResource( 3 )]
script = ExtResource( 1 )
shooterEnemy = ExtResource( 2 )
chaserEnemy = ExtResource( 2 )

[node name="Timer" type="Timer" parent="." index="0"]
wait_time = 2.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="." index="1"]
wait_time = 2.0
one_shot = true

[node name="Timer3" type="Timer" parent="." index="2"]
wait_time = 4.0
one_shot = true

[node name="Timer4" type="Timer" parent="." index="3"]
wait_time = 3.0
one_shot = true

[node name="Timer5" type="Timer" parent="." index="4"]
wait_time = 4.0
one_shot = true

[node name="Timer6" type="Timer" parent="." index="5"]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_Timer3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_Timer4_timeout"]
[connection signal="timeout" from="Timer5" to="." method="_on_Timer5_timeout"]
[connection signal="timeout" from="Timer6" to="." method="_on_Timer6_timeout"]
